--- a/css/style.css
+++ b/css/style.css
@@ -137,25 +137,24 @@ body {
 .master {
 	background: url('../images/resume/NTUST.jpg') no-repeat;
 	display: inline-block;
+	position: relative;
 	text-align: left;
-	width: 256px;
+	width: 1024px;
 	height: 256px;
 	border: none;
 	border-radius: 4px;
-	margin: 0px 30px 0px 30px;
-	#padding: 0px 50px;
-	background-size: cover;
+	margin: 0px 30x 0px 30px;
+	position: relative;
 }
 
 .bachelor {
 	background: url('../images/resume/THU.jpg') no-repeat;
 	display: inline-block;
 	text-align: left;
-	width: 256px;
+	width: 1024px;
 	height: 256px;
 	border: none;
-	border-radius: 4px;
-	
 	padding: 0px 50px;
-	background-size: cover;
+	border-radius: 4px;
+	position: relative;
 }
