--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body {
 	height: 256px;
 	border: none;
 	border-radius: 4px;
-	margin: 0px 30x 0px 30px;
+	margin: 0px 30px 0px 30px;
 	position: relative;
 }
 
